compiler/test-data/parser/types/errors/asset_initializer.frel
module types.errors.asset_initializer

theme BadTheme {
    primary : asset Color = #FFFFFF
}
